# atividade-integrada

./: README.md  app.py  pyproject.toml
migrations/versions/: a0fbd4d0f7c3_.py  c4e248794373_.py
templates/: index.html
