[tool.poetry]
name = "atividade-integrada"
version = "0.1.0"
description = ""
authors = ["Caio Raposo <caioraposo@protonmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
PyMySQL = "^0.10.1"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
